[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/symbols/fontawesome/thumbs-down.svg" type="Texture" id=1]
[ext_resource path="res://assets/symbols/fontawesome/thumbs-up.svg" type="Texture" id=2]
[ext_resource path="res://assets/symbols/fontawesome/question-circle.svg" type="Texture" id=3]
[ext_resource path="res://scripts/policy_window.gd" type="Script" id=4]

[node name="Ordinance" type="WindowDialog"]
anchor_left = 0.324707
anchor_top = 0.238333
anchor_right = 0.675293
anchor_bottom = 0.761667
window_title = "Ordinance"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OrdinanceLbl" type="Label" parent="."]
anchor_left = 0.0222841
anchor_top = 0.022293
anchor_right = 0.97493
anchor_bottom = 0.0700637
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ActionCtr" type="VBoxContainer" parent="."]
anchor_left = 0.0278552
anchor_top = 0.729299
anchor_right = 0.245125
anchor_bottom = 0.977707
custom_constants/separation = 5
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="TakeActionLbl" type="Label" parent="ActionCtr"]
margin_right = 78.0
margin_bottom = 14.0
text = "Take Action:"

[node name="EnectCtr" type="HBoxContainer" parent="ActionCtr"]
margin_top = 19.0
margin_right = 78.0
margin_bottom = 39.0
custom_constants/separation = 10

[node name="EnectBtn" type="Button" parent="ActionCtr/EnectCtr"]
margin_right = 22.0
margin_bottom = 20.0
icon = ExtResource( 2 )

[node name="EnectLbl" type="Label" parent="ActionCtr/EnectCtr"]
margin_left = 32.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 17.0
text = "Enact"

[node name="IgnoreCtr" type="HBoxContainer" parent="ActionCtr"]
margin_top = 44.0
margin_right = 78.0
margin_bottom = 64.0
custom_constants/separation = 10

[node name="IgnoreBtn" type="Button" parent="ActionCtr/IgnoreCtr"]
margin_right = 22.0
margin_bottom = 20.0
icon = ExtResource( 1 )

[node name="IgnoreLbl" type="Label" parent="ActionCtr/IgnoreCtr"]
margin_left = 32.0
margin_top = 3.0
margin_right = 73.0
margin_bottom = 17.0
text = "Ignore"

[node name="DescPanel" type="Panel" parent="."]
anchor_left = 0.281337
anchor_top = 0.0859873
anchor_right = 0.97493
anchor_bottom = 0.684713
__meta__ = {
"_edit_use_anchors_": true
}

[node name="DescriptionLbl" type="RichTextLabel" parent="DescPanel"]
anchor_left = 0.0160643
anchor_top = 0.0194175
anchor_right = 0.971888
anchor_bottom = 0.975728
margin_left = 0.652039
margin_right = 0.652039
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": true
}

[node name="AnalysisCtr" type="HBoxContainer" parent="."]
anchor_left = 0.549742
anchor_top = 0.869427
anchor_right = 0.967569
anchor_bottom = 0.933121
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="AnalysisLbl" type="Label" parent="AnalysisCtr"]
margin_left = 5.0
margin_top = 3.0
margin_right = 111.0
margin_bottom = 17.0
text = "Impact Analysis:"

[node name="AnalysisBtn" type="Button" parent="AnalysisCtr"]
margin_left = 121.0
margin_right = 143.0
margin_bottom = 20.0
icon = ExtResource( 3 )

[connection signal="pressed" from="ActionCtr/EnectCtr/EnectBtn" to="." method="_on_EnectBtn_pressed"]
[connection signal="pressed" from="ActionCtr/IgnoreCtr/IgnoreBtn" to="." method="_on_IgnoreBtn_pressed"]
[connection signal="pressed" from="AnalysisCtr/AnalysisBtn" to="." method="_on_AnalysisBtn_pressed"]
